--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scaleable=no, maximum-scale=1, minmum-scale=1"
+    />
     <title>柴犬網頁</title>
     <!-- 連結到外部的 style.css 檔案 -->
     <link rel="stylesheet" href="style.css" />
+    <script src="./index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -136,5 +140,123 @@
         </form>
       </section>
     </main>
+    <style>
+      html {
+        font-size: calc(16px + 1vw);
+      }
+      .parent {
+        font-size: 20px;
+      }
+      .useem {
+        font-size: 1em;
+      }
+      .userem {
+        font-size: 1rem;
+      }
+    </style>
+    <div class="parent">
+      <div class="useem">em</div>
+      <div class="userem">rem</div>
+    </div>
+    <style>
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .rwd-box {
+        width: 25%;
+        padding: 10px;
+      }
+      .card {
+        padding: 10px;
+        border: 1px solid black;
+      }
+      .card .img {
+        background-color: lightsalmon;
+        height: 100px;
+      }
+      .card .title {
+        font-size: 0.8em;
+        font-weight: bold;
+      }
+      .card .content {
+        font-size: 0.5em;
+        color: gray;
+      }
+      @media screen and (max-width: 480px) {
+        .rwd-box {
+          width: 100%;
+        }
+      }
+      @media screen and (min-width: 481px) and (max-width: 768px) {
+      }
+      @media screen and (min-width: 769px) and (max-width: 1200px) {
+      }
+      @media screen and (min-width: 1200px) {
+      }
+    </style>
+    <div class="container">
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">柴柴</div>
+          <div class="content">柴柴介紹</div>
+        </div>
+      </div>
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">Card Title</div>
+          <div class="content">Card content goes here.</div>
+        </div>
+      </div>
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">Card Title</div>
+          <div class="content">Card content goes here.</div>
+        </div>
+      </div>
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">Card Title</div>
+          <div class="content">Card content goes here.</div>
+        </div>
+      </div>
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">Card Title</div>
+          <div class="content">Card content goes here.</div>
+        </div>
+      </div>
+      <div class="rwd-box">
+        <div class="card">
+          <div class="img"></div>
+          <div class="title">Card Title</div>
+          <div class="content">Card content goes here.</div>
+        </div>
+      </div>
+    </div>
+    <style>
+      .spinner {
+        width: 50px;
+        height: 50px;
+        border: 5px solid rgba(0, 0, 0, 0.3);
+        border-top: 5px solid rgb(230, 223, 21); /* Blue */
+        border-radius: 50%;
+        animation: spin 2s linear infinite;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+    <div class="spinner"></div>
   </body>
 </html>
