--- a/index.html
+++ b/index.html
@@ -258,5 +258,8 @@
       }
     </style>
     <div class="spinner"></div>
+    <input id="year" type="text" placeholder="year" />
+    <button id="year_btn" type="button">計算</button>
+    <div id="answer">answer</div>
   </body>
 </html>
